fix/z-index stacking for hovercard

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -3,7 +3,7 @@
 .sidebar {
   &--wrapper {
     position: fixed;
-    // top: 52px;
+    z-index: 1;
     margin-right: 15px;
   }
 
