--- a/app/assets/stylesheets/alert.scss
+++ b/app/assets/stylesheets/alert.scss
@@ -1,6 +1,6 @@
 .alert-mask {	
   position: fixed;	
-  z-index: 9998;	
+  z-index: 6;	
   top: 0;	
   left: 0;	
   width: 100%;	
