--- a/app/assets/stylesheets/popover.scss
+++ b/app/assets/stylesheets/popover.scss
@@ -7,7 +7,7 @@
     box-shadow: 0 0 6px rgba(0,0,0,.3);
     width: 120px;
     text-align: left;
-    z-index: 5;
+    z-index: 4;
     padding: 8px 0px;
     font-size: 14px;
     top: calc(100% + 8px);
